# GoblinVoice

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
src/goblinvoice/: __init__.py  config.py  errors.py  types.py
src/goblinvoice/adapters/: __init__.py  base.py  pockettts.py  qwen3tts.py  registry.py
src/goblinvoice/api/: __init__.py  app.py  schemas.py
src/goblinvoice/bot/: client.py  commands.py  playback.py
src/goblinvoice/orchestrator/: __init__.py  backend_policy.py  job_queue.py  service.py
src/goblinvoice/storage/: filesystem.py
tests/: conftest.py
tests/integration/: test_adapter_registry.py  test_api_contracts.py  test_bot_parsing.py
tests/unit/: test_backend_policy.py  test_job_queue.py  test_pockettts_adapter.py  test_qwen3tts_adapter.py  test_storage_and_consent.py
tools/: __init__.py  goblinvoice_tui.py
voices/users/968966996878299156/: 1454596744678735968.json
